--- a/app/assets/stylesheets/partials/_navigation.sass
+++ b/app/assets/stylesheets/partials/_navigation.sass
@@ -1,6 +1,5 @@
 $nav-height: 50px
 nav
-    position: absolute
     width: 100%
     z-index: 100
 
