--- a/app/assets/stylesheets/partials/dashboard/editor/_sidebar.sass
+++ b/app/assets/stylesheets/partials/dashboard/editor/_sidebar.sass
@@ -55,6 +55,10 @@
     width: $sidebar-width
     border-right: solid 2px #c7c7c7
 
+    position: fixed
+    top: 0
+    bottom: 0
+
     overflow: hidden
 
     padding-top: 2rem
